--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,26 +7,7 @@
         </h1>
         <% end %>
         <nav>
-            <div class="bookingtrigger">
-                <span>BOOK NOW</span>
-                <div class="bookingmodal">
-                    <form action="/my-handling-form-page" method="post">
-                        <div class="bookinginput">
-                            <label for="checkin">Check in</label><br>
-                            <input type="text" id="checkin" name="checkin"/>
-                        </div>
-                        <div class="bookinginput">
-                            <label for="checkout">Check out</label><br>
-                            <input type="text" id="checkout" name="checkout"/>
-                        </div>
-                        <div class="bookinginput guests">
-                            <label for="guests">Guests</label><br>
-                            <input type="text" id="guests" name="guests"/>
-                        </div>
-                        <button class="submit" type="submit">BOOK NOW</button>
-                    </form>
-                </div>
-            </div>
+            <%= render 'layouts/modal' %>
             <a href="#">Gallery</a>
             <a href="#">Reviews</a>
         </nav>
