--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,8 +8,8 @@
         <% end %>
         <nav>
             <%= render 'layouts/modal' %>
-            <a href="#">Gallery</a>
-            <a href="#">Reviews</a>
+            <%= link_to "Gallery", photogallery_pages_path %>
+            <%= link_to "Reviews", reviews_path %>
         </nav>
     </div>
 </header>
