REFACTOR OF SHIT

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,7 +1,9 @@
 <div class="carousel-container">
     <div class="carousel">
         <% @carousel.photos.each do |photo| %>
-        <%= image_tag(photo.image_url(:standard)) %>
+        <figure>
+            <%= image_tag(photo.image_url(:standard)) %>
+        </figure>
         <% end %>
     </div>
 </div>
