--- a/app/views/reviews/_tripadvisor.html.erb
+++ b/app/views/reviews/_tripadvisor.html.erb
@@ -1,30 +1,33 @@
 <div id="TA_selfserveprop500" class="TA_selfserveprop">
-<ul id="ZHjNy0W8ui" class="TA_links jOeRj0Haf">
-<li id="Z15kzAHgo6" class="bJ8SvSqM">
-<a target="_blank" href="https://www.tripadvisor.nl/"><img src="https://www.tripadvisor.nl/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
-</li>
-</ul>
+    <ul id="ZHjNy0W8ui" class="TA_links jOeRj0Haf">
+        <li id="Z15kzAHgo6" class="bJ8SvSqM">
+            <a target="_blank" href="https://www.tripadvisor.nl/"><img src="https://www.tripadvisor.nl/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+        </li>
+    </ul>
 </div>
-<script src="https://www.jscache.com/wejs?wtype=selfserveprop&amp;uniq=500&amp;locationId=10356655&amp;lang=nl&amp;rating=true&amp;nreviews=5&amp;writereviewlink=true&amp;popIdx=true&amp;iswide=false&amp;border=true&amp;display_version=2"></script>
-
 <style>
 
-  /* Changing tripadvisor styling */
-  * {
-    font-family: inherit;
-  }
-  div#CDSWIDSSP {
-    width: 100% !important;
-  }
-  div.widSSPData, div.widSSPComponent {
-    border: none !important;
-  }
-  div.widSSPLegal, dt.widSSPTagline, div.widSSPSummary {
-    display: none !important;
-  }
-  div.widSSPData {
-    border: 1px solid grey !important;
-    margin-top: 30px;
-    margin-bottom: 30px;
-  }
+
+    /* Changing tripadvisor styling */
+    * {
+        font-family: inherit;
+    }
+    div#CDSWIDSSP {
+        width: 100% !important;
+    }
+    div.widSSPComponent,
+    div.widSSPData {
+        border: none !important;
+    }
+    div.widSSPLegal,
+    div.widSSPSummary,
+    dt.widSSPTagline {
+        display: none !important;
+    }
+    div.widSSPData {
+        border: 1px solid grey !important;
+        margin-top: 30px;
+        margin-bottom: 30px;
+    }
+
 </style>
