--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,170 +1,21 @@
-<style>
-  /* Form -- Creating some air in the form */
-  label {
-    display: block;
-    margin-bottom: 5px;
-    margin-top: 10px;
-  }
+<div class="content">
+    <h1>Reviews</h1>
 
-  input {
-    margin-top: 10px;
-  }
+    <!-- Render tripadvisor and review partials -->
+    <%= render "reviews" %>
 
-  /* Make form input red when conditions are not met */
-  .validationErrorField {
-    border: 1px solid red;
-  }
+    <p>Did you stay with us? We would like to hear your feedback.</p>
 
-  /* Button - Removing button styling from show-partial button */
-  #show-partial {
-    background:none;
-    border:none;
-    font-size:1em;
-    color: black;
-    text-decoration: underline;
-    padding: inherit;
-  }
+    <!-- When clicking on the tell us about your stay button, javascript wil make the partial div visible or invisable (toggle) -->
+    <button id="show-partial">
+        Tell us about your stay
+    </button>
 
-  #reviews {
-    padding: 0px;
-    margin: 0px;
-  }
+    <div style="display:none;" id="partial">
+        <%= render "form" %>
+    </div>
 
-  #tripadvisor {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-  }
-
-  ul {
-    list-style-type: none;
-    padding: 0px;
-  }
-</style>
-<h1>Reviews</h1>
-
-<!-- Render tripadvisor and review partials -->
-<%= render "reviews" %>
-
-<p>Did you stay with us? We would like to hear your feedback.</p>
-
-<!-- When clicking on the tell us about your stay button, javascript wil make the partial div visible or invisable (toggle) -->
-<button id="show-partial">
-  Tell us about your stay
-</button>
-
-<div style="display:none;" id="partial">
-  <%= render "form" %>
+    <div id="tripadvisor">
+        <%= render "tripadvisor" %>
+    </div>
 </div>
-
-<div id="tripadvisor">
-  <%= render "tripadvisor" %>
-</div>
-
-<script>
-// Showing form partial
-$('#show-partial').click(function(){
-    $('#partial').toggle();
-});
-
-// Updating reviews with ajax
-function createReview(name, stars, review) {
-  var newReview = {name: name, stars: stars, review: review};
-    $.ajax({
-      type: "POST",
-      url: "/reviews.json",
-      data: JSON.stringify({
-          review: newReview
-      }),
-      contentType: "application/json",
-      dataType: "json"})
-    .done(function(data) {
-      var allStars = ""
-
-      for (i = 0; i < stars; i++) {
-        allStars += '<img src="http://i.imgur.com/nbis287.png" alt="" height="10px" width="10px"> '
-      }
-      var reviewList = $('<ul></ul>')
-        .append($('<li>').append("<strong>Review by</strong>: " + name))
-        .append($('<li>').append("<strong>Stars: </strong>" + allStars))
-        .append($('<li>').append("<strong>Review: </strong>" + review));
-
-      $("#reviews").append(reviewList).append("<hr>");
-    })
-
-
-    .fail(function(error) {
-      console.log(error);
-
-      if(error.responseJSON.name != undefined) {
-        error_message = error.responseJSON.name[0];
-        showError("name", error_message)
-      }
-       if (error.responseJSON.stars != undefined) {
-         error_message = error.responseJSON.stars[0];
-         showError("stars", error_message)
-       }
-       if (error.responseJSON.review != undefined) {
-         error_message = error.responseJSON.review[0];
-         showError("review", error_message)
-       }
-    });
-}
-
-function showError(attr, error_message) {
-  var errorHelpBlock = $('<span class="help-block"></span>')
-    .attr('id', 'error_message')
-    .text(" Please enter " + attr + ". It " + error_message + ".");
-
-  switch(attr) {
-    case "name":
-      $("#name_label").append(errorHelpBlock);
-      $("#review_name").addClass("validationErrorField")
-      break;
-    case "stars":
-      $("#stars_label").append(errorHelpBlock);
-      $("#review_stars").addClass("validationErrorField")
-      break;
-    case "review":
-      $("#review_label").append(errorHelpBlock);
-      $("#review_review").addClass("validationErrorField")
-      break;
-  }
-}
-
-function resetErrors(attr) {
-  switch(attr) {
-    case "name":
-      $("#review_name").removeClass("validationErrorField");
-      break;
-    case "stars":
-      $("#review_stars").removeClass("validationErrorField");
-      break;
-    case "review":
-      $("#review_review").removeClass("validationErrorField");
-      break;
-  }
-}
-
-function submitReview(event) {
-  event.preventDefault();
-  $("#error_message").remove();
-  createReview($("#review_name").val(), $("#review_stars").val(), $("#review_review").val());
-  $("#review_name").val(null);
-  $("#review_stars").val(5);
-  $("#review_review").val(null);
-}
-
-$("form").bind('submit', submitReview);
-$("#review_name").click(function(){
-  resetErrors("name");
-});
-$("#review_stars").click(function(){
-  resetErrors("stars");
-});
-$("#review_review").click(function(){
-  resetErrors("review");
-});
-</script>
