--- a/app/views/pages/photogallery.html.erb
+++ b/app/views/pages/photogallery.html.erb
@@ -1,5 +1,3 @@
-<h1>Photogallery</h1>
-<div id="instagram"></div>
-
-<script src="/js/popup.js"></script>
-<script type="text/javascript" src="/js/photogallery.js" charset="utf-8"></script>
+<div class="content">
+    <div id="instagram" class="instagram"></div>
+</div>
