--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,4 +1,4 @@
-<div class="content">
+<div class="content review">
     <h1>Reviews</h1>
 
     <!-- Render tripadvisor and review partials -->
@@ -6,7 +6,6 @@
 
     <p>Did you stay with us? We would like to hear your feedback.</p>
 
-    <!-- When clicking on the tell us about your stay button, javascript wil make the partial div visible or invisable (toggle) -->
     <button id="show-partial">
         Tell us about your stay
     </button>
