allow editing prices

--- a/app/views/admin/prices/_form.html.erb
+++ b/app/views/admin/prices/_form.html.erb
@@ -12,6 +12,10 @@
     <%= f.number_field :min_days, placeholder: :min_days %>
   </div>
   <div class="form-group">
+    <%= f.label :saturdays_only %>
+    <%= f.check_box :saturdays_only %>
+  </div>
+  <div class="form-group">
     <%= f.label :nightly_price %>
     <%= f.number_field :nightly_price, placeholder: :nightly_price %>
   </div>
