--- a/app/views/admin/prices/_price.html.erb
+++ b/app/views/admin/prices/_price.html.erb
@@ -4,6 +4,11 @@
     <span>|</span>
     <span><%= price.end_date %></span>
   </div>
+  <% if price.saturdays_only %>
+  <div class="well-row-group">
+    <span>Check in/out on Saturdays only</span>
+  </div>
+  <% end %>
   <div class="well-column-group">
     <div class="well-row"><span>Minimum nights:</span><span><%= price.min_days %><span></div>
     <div class="well-row"><span>Nightly Price:</span><span><%= price.nightly_price %></span></div>
