--- a/app/views/admin/bookings/index.html.erb
+++ b/app/views/admin/bookings/index.html.erb
@@ -1,3 +1,8 @@
+<h2>Help</h2>
+<p>This page displays all current bookings, as well as the last guest that occupied the house.</p>
+<p>To mark a booking as confirmed (instead of reserved) or paid, simply click the corresponding button.</p>
+<p>To delete a booking (perhaps because the guests cancelled), click the corresponding 'Delete' button.</p>
+<p>It is not possible to edit bookings after they have been made. If a booking is incorrect, please delete and re-create it.</p>
 
 <h2>Last and current guests</h2>
 <div class="bookings">
