--- a/app/views/admin/panel/index.html.erb
+++ b/app/views/admin/panel/index.html.erb
@@ -1,3 +1,5 @@
 <h2>Admin panel</h2>
 
-Welcome! Use this panel to change your website, view bookings, etc!
+<p>Welcome! Use this panel to change your website, view bookings, etc!</p>
+
+<p>For help, we included a small paragraph on every subsection.</p>
