--- a/app/views/admin/prices/index.html.erb
+++ b/app/views/admin/prices/index.html.erb
@@ -1,3 +1,9 @@
+<h2>Help</h2>
+<p><strong>Important:</strong> Make sure there is a time period for <em>every</em>
+day you plan to rent out the property.</p>
+<p>Also make sure to let the new period begin the day after the previous period ends.</p>
+<p>This page will currently display all periods. It is possible to delete them when they are no longer necessary to be shown.</p>
+
 <h2>Seasonal Prices</h2>
 
 <% if @price.errors.any? %>
@@ -13,6 +19,6 @@
 <% end %>
 
 <div class="form-wrapper">
-  <h3>Add Prices</h3>
+  <h3>Add Season</h3>
   <%= render 'form' %>
 </div>
