--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -77,7 +77,7 @@ div.well {
   max-width: 300px;
   padding: 10px;
   margin-bottom: 10px;
-  border: 1px solid black;
+  border: 1px solid $base-color;
   border-radius: 4px;
   display: flex;
   flex-direction: column;;
@@ -100,6 +100,11 @@ div.well-column-group {
     flex-direction: row;
     justify-content: space-between;
   }
+}
+
+div.well-divider {
+  border-top: 1px solid $base-color;
+  margin-bottom: 8px;
 }
 div.review-show {
   padding-top: 1px;
