--- a/app/views/admin/prices/_price.html.erb
+++ b/app/views/admin/prices/_price.html.erb
@@ -13,7 +13,7 @@
     <div class="well-row"><span>Minimum nights:</span><span><%= price.min_days %><span></div>
     <div class="well-row"><span>Nightly Price:</span><span>&euro; <%= price.nightly_price %></span></div>
     <div class="well-row"><span>Price per extra:</span><span>&euro; <%= price.extra_price %></span></div>
-    <div class="well-row"><span>Service costs:</span><span>&euro;</span></div>
+    <div class="well-row"><span>Service costs:</span><span>&euro; <%= price.service_costs %></span></div>
   </div>
   <div class="well-divider"></div>
   <div class="well-actions">
