--- a/app/views/bookings/_form-booking.html.erb
+++ b/app/views/bookings/_form-booking.html.erb
@@ -24,10 +24,10 @@
     <%= f.text_field :title, placeholder: "title" %> <br>
 
     <%= f.label :phone %>
-    <%= f.text_field :phone, placeholder: "phone number" %> <br>
+    <%= f.telephone_field :phone, placeholder: "phone number" %> <br>
 
     <%= f.label :email %>
-    <%= f.text_field :email, placeholder: "email" %> <br>
+    <%= f.email_field :email, placeholder: "email" %> <br>
 
     <%= f.label :street_name %>
     <%= f.text_field :street_name, placeholder: "street name" %>  <br>
@@ -41,8 +41,8 @@
     <%= f.label :zip_code %>
     <%= f.text_field :zip_code, placeholder: "zip code" %> <br>
 
-    <%= f.label :people %>
-    <%= f.text_field :people, placeholder: "number of people " %> <br>
+    <%= f.label "Number of people" %>
+    <%= f.number_field :people, placeholder: 8, min: 1, max: 15 %> <br>
 
     <div>
       <%= f.submit "Book Now" %>
