--- a/app/assets/stylesheets/pages/admin_panel.scss
+++ b/app/assets/stylesheets/pages/admin_panel.scss
@@ -46,7 +46,7 @@ body.admin_panel {
   margin-left: 200px;
   padding: 5px 10px;
 }
-.bookings {
+.well-wrapper {
   display: flex;
   .well {
     margin-right: 10px;
@@ -80,7 +80,8 @@ div.well {
   border: 1px solid $base-color;
   border-radius: 4px;
   display: flex;
-  flex-direction: column;;
+  flex-direction: column;
+  box-shadow: 1px 1px 2px $base-color;
 }
 div.well-row-group {
   display: flex;
