--- a/app/assets/stylesheets/partials/booking_modal.scss
+++ b/app/assets/stylesheets/partials/booking_modal.scss
@@ -71,7 +71,13 @@
             border: 1px solid #999;
             border-radius: 3px;
             margin-top: 5px;
+            font-size: 12px;
+
         }
+    }
+
+    .date input::-webkit-inner-spin-button {
+        display: none;
     }
 
     .guests {
