--- a/app/assets/stylesheets/pages/home_page.scss
+++ b/app/assets/stylesheets/pages/home_page.scss
@@ -5,7 +5,7 @@
 }
 
 .home-text-wrapper {
-    max-height: 1000px;
+    max-height: 9000px;
     transition: all 1s ease-in-out;
 }
 
@@ -19,4 +19,35 @@
     margin-top: 25px;
     display: inline-block;
     color: $base-color;
+}
+
+.reviews-container {
+    margin-top: 50px;
+    width: 100%;
+    background-color: $light-base-color;
+}
+
+.reviews-wrapper {
+    max-width: $content-width;
+    margin: 0 auto;
+    display: flex;
+}
+
+.reviews-item {
+    color: white;
+    width: calc(100%/3);
+    padding: 30px;
+    background-color: $base-color;
+}
+
+.reviews-item:nth-child(2) {
+    background-color: $light-base-color;
+}
+
+.reviews-header {
+    text-align: right;
+}
+
+.reviews-body {
+    text-align: center;
 }
