--- a/app/assets/stylesheets/partials/navbar.scss
+++ b/app/assets/stylesheets/partials/navbar.scss
@@ -20,7 +20,7 @@
     padding: 10px;
     display: flex;
     align-items: flex-end;
-    justify-content: space-around;
+    justify-content: space-between;
   }
   nav {
     display: flex;
