--- a/app/assets/stylesheets/base/page.scss
+++ b/app/assets/stylesheets/base/page.scss
@@ -24,8 +24,15 @@ body {
   margin: 0 auto;
 }
 
+.star {
+  width: 10px;
+}
+
 figure {
   margin: 0;
+  img {
+    width: 100%;
+  }
 }
 
 footer {
