--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -4,10 +4,10 @@
         <li><strong>Review by: </strong><%= review.name %></li>
         <li><strong>Stars: </strong>
           <% review.stars.times do %>
-            <img src="http://i.imgur.com/nbis287.png" alt="" height="10px" width="10px">
+            <%= image_tag 'full_star.svg', class: 'star', alt: 'full star' %>
           <% end %>
           <% (5 - review.stars).times do %>
-            <img src="http://i.imgur.com/VrtkzWz.png" alt="" height="10px" width="10px">
+            <%= image_tag 'empty_star.svg', class: 'star', alt: 'empty star' %>
           <% end %>
         </li>
         <li><strong>Review: </strong><%= review.review %></li>
