--- a/app/views/layouts/_modal.html.erb
+++ b/app/views/layouts/_modal.html.erb
@@ -6,11 +6,11 @@
         <form action="/bookings/new" method="get">
             <div class="bookinginput date">
                 <label for="checkin">Check in</label><br>
-                <input type="date" id="checkin" name="checkin"/>
+                <input type="text" id="checkin" name="checkin"/>
             </div>
             <div class="bookinginput date">
                 <label for="checkout">Check out</label><br>
-                <input type="date" id="checkout" name="checkout"/>
+                <input type="text" id="checkout" name="checkout"/>
             </div>
             <div class="bookinginput guests">
                 <label for="guests">Guests</label><br>
