add calendar to admin panel

--- a/app/views/admin/panel/index.html.erb
+++ b/app/views/admin/panel/index.html.erb
@@ -3,3 +3,6 @@
 <p>Welcome! Use this panel to change your website, view bookings, etc!</p>
 
 <p>For help, we included a small paragraph on every subsection.</p>
+<hr>
+<p><strong>Current Dates available to book:</strong></p>
+<div id="admin-calendar"></div>
