--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,5 +1,5 @@
 <div class="content review">
-    <h1>Reviews</h1>
+    <h2 class="headings text-align">Reviews</h2>
 
     <!-- Render tripadvisor and review partials -->
     <%= render "reviews" %>
