--- a/app/assets/stylesheets/base/page.scss
+++ b/app/assets/stylesheets/base/page.scss
@@ -1,44 +1,56 @@
 * {
-  box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-  font-family: $font-body;
-  font-weight: $font-normal-weight;
-  color: $base-dark;
-  width: 100%;
-  height: 100vh;
-  display: flex;
-  flex-direction: column;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  .page-body {
-    flex: 1;
-  }
+    font-family: $font-body;
+    font-weight: $font-normal-weight;
+    color: $base-dark;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+
+    .page-body {
+        flex: 1;
+    }
 }
 
 .content {
-  max-width: $content-width;
-  padding: 10px;
-  margin: 0 auto;
+    max-width: $content-width;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.headings {
+    color: $base-color;
+    text-transform: uppercase;
+    font-family: $font-title;
 }
 
 .star {
-  width: 10px;
+    width: 10px;
+}
+
+.text-align {
+    text-align: center;
 }
 
 figure {
-  margin: 0;
-  img {
-    width: 100%;
-  }
+    margin: 0;
+
+    img {
+        width: 100%;
+    }
 }
 
 footer {
-  width: 100%;
-  padding: 40px 0;
-  text-align: center;
-  background-color: $base-dark;
-  color: white;
+    width: 100%;
+    padding: 40px 0;
+    text-align: center;
+    background-color: $base-dark;
+    color: white;
 }
