--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @review, id: "review_form", remote: true do |f| %>
+<%= form_for @review, id: "review_form",html:{ class: 'content_form short'}, remote: true do |f| %>
   <% if @review.errors.any? %>
     <ul>
       <% @review.errors.full_messages.each do |msg| %>
@@ -8,15 +8,15 @@
   <% end %>
 
   <label id="name_label">What is your name?</label>
-  <%= f.text_field :name %> <br>
+  <%= f.text_field :name %>
 
   <label id="star_label">How many stars would you give us?</label>
   <%= f.select(:stars, options_for_select([['★', "1"], ['★★', "2"], ['★★★', "3"], ['★★★★', "4"], ['★★★★★', "5"]], "5")) %> <br>
 
   <label id="review_label">How would you describe your stay?</label>
-  <%= f.text_area :review %> <br>
+  <%= f.text_area :review %> 
 
-  <%= f.submit "Enter review" %>
+  <%= f.submit "Enter review" , class: 'submit' %>
 
 <% end %>
 
