--- a/app/views/admin/photos/edit.html.erb
+++ b/app/views/admin/photos/edit.html.erb
@@ -1,7 +1,7 @@
 <%= cl_image_tag(@photo.image, width: 250, height: 200) %> <br>
 <%= form_for ['admin', @photo] do |f| %>
   <div class="form-group">
-    <%= f.file_field "image", type: :file, multiple: false %>
+    <%= f.file_field :image, type: :file, multiple: false %>
   </div>
   <div class="form-group">
     <%= f.submit "Edit", id: "edit-photos" %>
