--- a/app/views/admin/paragraphs/_form.html.erb
+++ b/app/views/admin/paragraphs/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for ['admin', @paragraph] do |f| %>
+<%= form_for ['admin', @page, @paragraph] do |f| %>
   <div class="form-group">
     <%= f.label :text %>
     <%= f.text_area :text %>
