--- a/app/views/admin/paragraphs/edit.html.erb
+++ b/app/views/admin/paragraphs/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Edit paragraph <%= @paragraph.id %></h1>
-<%= form_for ['admin', @paragraph] do |f| %>
+<%= form_for ['admin', @page, @paragraph] do |f| %>
   <div class="form-group">
     <%= f.label :text %>
     <%= f.text_area :text %>
