--- a/app/views/admin/paragraphs/index.html.erb
+++ b/app/views/admin/paragraphs/index.html.erb
@@ -1,5 +1,5 @@
 <% @paragraphs.each do |p| %>
   <h1>Paragraph id: <%= p.id %></h1>
   <p><%= p.text %></p>
-  <%= link_to "Edit", edit_admin_paragraph_path(p) %>
+  <%= link_to "Edit", edit_admin_page_paragraph_path(@page, p) %>
 <% end %>
