--- a/app/views/admin/pages/index.html.erb
+++ b/app/views/admin/pages/index.html.erb
@@ -4,7 +4,7 @@
   <h2><%= page.name %></h2>
   <% if page.name == "home_page" %>
     <li><%= link_to "Edit paragraphs", admin_page_paragraphs_path(page.id) %></li>
-    <li><%= link_to "Edit photos", admin_page_carousels_path(page.id) %></li>
+    <li><%= link_to "Edit carousels", admin_page_carousels_path(page.id) %></li>
   <% end %>
     <!-- Link to paragraph edit -->
 <% end %>
