--- a/app/views/admin/photos/edit.html.erb
+++ b/app/views/admin/photos/edit.html.erb
@@ -1,5 +1,5 @@
 <%= cl_image_tag(@photo.image, width: 250, height: 200) %> <br>
-<%= form_for ['admin', @photo] do |f| %>
+<%= form_for ['admin', @page, @carousel, @photo] do |f| %>
   <div class="form-group">
     <%= f.file_field :image, type: :file, multiple: false %>
   </div>
