--- a/app/views/admin/photos/index.html.erb
+++ b/app/views/admin/photos/index.html.erb
@@ -2,6 +2,6 @@
 
 <% @photos.each do |p| %>
   <%= cl_image_tag(p.image, width: 250, height: 200) %> <br>
-  <%= link_to "Edit", edit_admin_page_carousel_photo_path(@page, @carousel, p) %>| Delete
+  <%= link_to "Edit", edit_admin_page_carousel_photo_path(@page, @carousel, p) %>| <%= link_to "Delete", admin_page_carousel_photo_path(@page, @carousel, p), confirm: "Are you sure? Once deleted, all your text is gone!", method: :delete %>
   <hr>
 <% end %>
