--- a/app/views/reviews/_reviews.html.erb
+++ b/app/views/reviews/_reviews.html.erb
@@ -1,6 +1,6 @@
 
 <div class="reviews-all-container">
-  <div class="reviews-all-wrapper">
+  <div class="reviews-all-wrapper" id="reviews-all-wrapper">
     <% @reviews.all.each do |r| %>
     <div class="reviews-all-item">
       <div class="reviews-all-header">
