--- a/app/views/reviews/_tripadvisor.html.erb
+++ b/app/views/reviews/_tripadvisor.html.erb
@@ -1,7 +1,7 @@
 <div id="TA_selfserveprop500" class="TA_selfserveprop">
     <ul id="ZHjNy0W8ui" class="TA_links jOeRj0Haf">
         <li id="Z15kzAHgo6" class="bJ8SvSqM">
-            <a target="_blank" href="https://www.tripadvisor.nl/"><img src="https://www.tripadvisor.nl/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
+            <a target="_blank" href="https://click.e.tripadvisor.com/?qs=fdff4bbe36ffc2998f8cfc873b4bd51a86da2968e8c84dd969d33093d6a1cb108f1c39aea5e2b7c0bf1787b9458d130a9b75d18f354c740ab38d59d450a34705"><img src="https://www.tripadvisor.nl/img/cdsi/img2/branding/150_logo-11900-2.png" alt="TripAdvisor"/></a>
         </li>
     </ul>
 </div>
