--- a/app/assets/stylesheets/pages/reviews.scss
+++ b/app/assets/stylesheets/pages/reviews.scss
@@ -31,11 +31,10 @@
 }
 
 .reviews-all-item {
-    color: white;
     width: calc((100%/3) - 30px);
     padding: 30px;
     margin: 20px 10px;
-    background-color: $base-color;
+    border: 2px solid $base-color;
 }
 
 
